gitops-disable/f1replaytiming/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: f1replaytiming-auth
  namespace: f1replaytiming
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: f1replaytiming-frontend
  basicAuth:
    users:
      name: f1replaytiming-basic-auth
